css/app.scss
/********************************/
/**   F1 2012 Point Finder     **/
/********************************/

//////////////////////////////////
// Base Styles
//////////////////////////////////
* {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

body {
	padding-top: 41px;
	padding-bottom: 40px;
}

//////////////////////////////////
// Layout Styles
//////////////////////////////////


//////////////////////////////////
// Modules Styles
//////////////////////////////////
.circuit-selector {
	float: right;
	margin-top: 5px;

	label {
		float: left;
		line-height: 30px;
		margin: 0 20px 0 0;
	}

	select {
		margin: 0;
	}
}

.map {
	bottom: 0;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;

	.map-google-map-container {
		position: relative;
		height: 100%;
		width: 100%;
	}
}

//////////////////////////////////
// State Styles
//////////////////////////////////

